--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "crypto-random-string": "^3.3.1",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "fix-path": "^3.0.0",
     "joi": "^17.9.1",
+    "mongoose": "^7.1.0",
     "morgan": "1.10.0",
     "nanoid": "^3.3.4",
     "node-fetch": "^2.6.9"
