--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "crypto-random-string": "^3.3.1",
@@ -16,6 +17,7 @@
     "express": "^4.17.1",
     "fix-path": "^3.0.0",
     "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
     "morgan": "1.10.0",
     "nanoid": "^3.3.4",
