--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "cross-env": "7.0.3",
     "crypto-random-string": "^3.3.1",
     "dotenv": "^16.0.3",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "fix-path": "^3.0.0",
+    "gravatar": "^1.8.2",
+    "jimp": "^0.22.8",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
     "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.4",
-    "node-fetch": "^2.6.9"
+    "node-fetch": "^2.6.9",
+    "path": "^0.12.7",
+    "promises": "^0.2.5"
   },
   "devDependencies": {
     "eslint": "7.19.0",
