--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "mongoose": "^7.1.0",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^3.3.4",
+    "nanoid": "^3.3.6",
     "node-fetch": "^2.6.9",
+    "nodemailer": "^6.9.2",
     "path": "^0.12.7",
     "promises": "^0.2.5"
   },
